Fixed validations for Info Exchange except DOB.

--- a/app/src/main/res/layout/activity_driver_info.xml
+++ b/app/src/main/res/layout/activity_driver_info.xml
@@ -69,12 +69,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/fNameTv"
-                android:paddingTop="10dp"
-                android:hint="  Type Something"
                 android:layout_marginLeft="10dp"
+                android:background="@drawable/rounded_corners"
+                android:hint="  Type Something"
+                android:paddingTop="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
-                android:textColorHint="@color/gray"
-                android:background="@drawable/rounded_corners"/>
+                android:textColorHint="@color/gray" />
 
             <TextView
                 android:id="@+id/lNameTv"
@@ -91,12 +92,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lNameTv"
-                android:paddingTop="10dp"
-                android:hint="  Type Something"
                 android:layout_marginLeft="10dp"
+                android:background="@drawable/rounded_corners"
+                android:hint="  Type Something"
+                android:paddingTop="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
-                android:textColorHint="@color/gray"
-                android:background="@drawable/rounded_corners"/>
+                android:textColorHint="@color/gray" />
 
 
             <TextView
@@ -114,12 +116,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/dobTv"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/rounded_corners"
                 android:hint="  Type Something"
                 android:paddingTop="10dp"
-                android:layout_marginLeft="10dp"
+                android:inputType="date"
                 android:textColor="@color/black"
-                android:textColorHint="@color/gray"
-                android:background="@drawable/rounded_corners"/>
+                android:textColorHint="@color/gray" />
 
             <TextView
                 android:id="@+id/addressTv"
@@ -136,12 +139,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/addressTv"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/rounded_corners"
                 android:hint="  Type Something"
                 android:paddingTop="10dp"
-                android:layout_marginLeft="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
-                android:textColorHint="@color/gray"
-                android:background="@drawable/rounded_corners"/>
+                android:textColorHint="@color/gray" />
 
             <TextView
                 android:id="@+id/driverLicenceTv"
@@ -161,6 +165,7 @@
                 android:paddingTop="10dp"
                 android:hint="  Type Something"
                 android:layout_marginLeft="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
                 android:background="@drawable/rounded_corners"/>
