--- a/app/src/main/res/layout/activity_insurance_exchange.xml
+++ b/app/src/main/res/layout/activity_insurance_exchange.xml
@@ -69,12 +69,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/providerTv"
-                android:paddingTop="10dp"
-                android:hint="  Type Something"
                 android:layout_marginLeft="10dp"
+                android:background="@drawable/rounded_corners"
+                android:hint="  Type Something"
+                android:paddingTop="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
-                android:textColorHint="@color/gray"
-                android:background="@drawable/rounded_corners"/>
+                android:textColorHint="@color/gray" />
 
             <TextView
                 android:id="@+id/policyNoTv"
@@ -94,6 +95,7 @@
                 android:paddingTop="10dp"
                 android:hint="  Type Something"
                 android:layout_marginLeft="10dp"
+                android:inputType="number"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
                 android:background="@drawable/rounded_corners"/>
@@ -117,6 +119,7 @@
                 android:paddingTop="10dp"
                 android:hint="  Type Something"
                 android:layout_marginLeft="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
                 android:background="@drawable/rounded_corners"/>
