--- a/app/src/main/res/layout/activity_vehicle_details.xml
+++ b/app/src/main/res/layout/activity_vehicle_details.xml
@@ -67,12 +67,13 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/vehicleMakeTv"
 
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/rounded_corners"
                 android:hint="  Type Something"
                 android:paddingTop="10dp"
-                android:layout_marginLeft="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
-                android:textColorHint="@color/gray"
-                android:background="@drawable/rounded_corners"/>
+                android:textColorHint="@color/gray" />
 
             <TextView
                 android:id="@+id/VehicleYearTv"
@@ -92,6 +93,7 @@
                 android:hint="  Type Something"
                 android:paddingTop="10dp"
                 android:layout_marginLeft="10dp"
+                android:inputType="number"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
                 android:background="@drawable/rounded_corners"/>
@@ -115,6 +117,7 @@
                 android:hint="  Type Something"
                 android:paddingTop="10dp"
                 android:layout_marginLeft="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
                 android:background="@drawable/rounded_corners"/>
@@ -138,6 +141,7 @@
                 android:hint="  Type Something"
                 android:paddingTop="10dp"
                 android:layout_marginLeft="10dp"
+                android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
                 android:background="@drawable/rounded_corners"/>
@@ -159,6 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/vehicleTypeTv"
                 android:hint="  Type Something"
+                android:inputType="text"
                 android:paddingTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/black"
