--- a/app/src/main/res/layout/activity_final_check.xml
+++ b/app/src/main/res/layout/activity_final_check.xml
@@ -340,6 +340,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="-2dp"
+                        android:fontFamily="@font/open_sans_light"
                         android:text="Emergency Contact Phone Number"
                         android:textColor="#FFD700"
                         android:textSize="25sp" />
