--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,20 +31,15 @@
                 android:textSize="28sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <Button
                 android:id="@+id/step_by_step"
                 android:layout_width="250dp"
                 android:layout_height="60dp"
-
-                android:layout_marginTop="120dp"
                 android:fontFamily="@font/open_sans"
-                android:backgroundTint="@color/white"
-                android:text="Report Accident(Step-By-Step)"
                 android:layout_marginTop="80dp"
-
                 android:onClick="onClick"
                 android:text="Report Accident(Step-By-Step)"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -55,17 +50,13 @@
                 android:id="@+id/info_exchange"
                 android:layout_width="250dp"
                 android:layout_height="60dp"
-                android:fontFamily="@font/open_sans"
-                android:backgroundTint="@color/white"
-                android:onClick="onClick"
-                android:text="Information\n Exchange"
                 android:layout_marginTop="25dp"
+                android:fontFamily="@font/open_sans"
                 android:text="Information Exchange"
                 android:onClick="onClick"
                 app:layout_constraintTop_toBottomOf="@id/step_by_step"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/step_by_step" />
+                app:layout_constraintRight_toRightOf="parent" />
 
             <Button
                 android:id="@+id/handbook"
@@ -73,7 +64,6 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="25dp"
                 android:fontFamily="@font/open_sans"
-                android:backgroundTint="@color/white"
                 android:onClick="onClick"
                 android:text="Handbook"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -86,11 +76,8 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="25dp"
                 android:fontFamily="@font/open_sans"
-                android:backgroundTint="@color/white"
                 android:onClick="onClick"
-
                 android:text="View Reports"
-
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/handbook" />
