--- a/app/src/main/res/layout/activity_final_exchange.xml
+++ b/app/src/main/res/layout/activity_final_exchange.xml
@@ -57,141 +57,265 @@
             android:layout_below="@+id/relative1">
 
             <TextView
-                android:id="@+id/firstName"
+                android:id="@+id/firstNameTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
+                android:text="  First Name"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/firstName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/firstNameTv"
                 android:text="  1"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/lastNameTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/firstName"
+                android:layout_marginTop="30dp"
+                android:text="  Last Name"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/lastName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/firstName"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/lastNameTv"
                 android:text="  2"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/dobTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/lastName"
+                android:layout_marginTop="30dp"
+                android:text="  Date of Birth"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/DOB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lastName"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/dobTv"
                 android:text="  3"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
 
             <TextView
+                android:id="@+id/addTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/DOB"
+                android:layout_marginTop="30dp"
+                android:text="  Address"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+            <TextView
                 android:id="@+id/Address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/DOB"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/addTv"
                 android:text="  4"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/licenseTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Address"
+                android:layout_marginTop="30dp"
+                android:text="  License"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/license"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Address"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/licenseTv"
                 android:text="  5"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/provTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/license"
+                android:layout_marginTop="30dp"
+                android:text="  Insurance Provider"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/insProvider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/license"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/provTv"
                 android:text="  6"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
 
+            <TextView
+                android:id="@+id/polTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/insProvider"
+                android:layout_marginTop="30dp"
+                android:text="  Insurance Policy Number"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/insPolicyNum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/insProvider"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/polTv"
                 android:text="  7"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/holTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/insPolicyNum"
+                android:layout_marginTop="30dp"
+                android:text="  Insurance Policy Holder"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/insPolicyHolder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/insPolicyNum"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/holTv"
                 android:text="  8"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/makeTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/insPolicyHolder"
+                android:layout_marginTop="30dp"
+                android:text="  Vehicle Make"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Make"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/insPolicyHolder"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/makeTv"
                 android:text="  9"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/yearTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Make"
+                android:layout_marginTop="30dp"
+                android:text="  Vehicle Year"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Year"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Make"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/yearTv"
                 android:text="  10"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/plateTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Year"
+                android:layout_marginTop="30dp"
+                android:text="  Vehicle Plate"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Plate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Year"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/plateTv"
                 android:text="  11"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/stateTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Plate"
+                android:layout_marginTop="30dp"
+                android:text="  Vehicle State"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/vehicleState"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Plate"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/stateTv"
                 android:text="  12"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/typeTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/vehicleState"
+                android:layout_marginTop="30dp"
+                android:text="  Vehicle Type"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/vehicleState"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/typeTv"
                 android:text="  13"
                 android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Type"
+                android:layout_marginTop="30dp"
+                android:text="  Accident Location"
+                android:textColor="#FFD700"
                 android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/locationTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/Type"
-                android:layout_marginTop="50dp"
+                android:layout_below="@+id/location"
                 android:text="  14"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
@@ -216,7 +340,6 @@
                 android:paddingTop="10dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
-
 
 
         </RelativeLayout>
